# raterover

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test.py
docs/: .mint.json  .prettierrc  FLUID_CLIENT.md  TECHNICAL_SPECIFICATION.md  getting-started.mdx  installation.mdx  milestones.mdx  mint.json  quickstart.mdx
docs/api-reference/: authentication.mdx  endpoints.mdx
docs/community/: code-of-conduct.mdx  contributing.mdx  security.mdx
docs/core-concepts/: architecture.mdx  fsm-design.mdx  overview.mdx  pearl-integration.mdx  user-configuration.mdx
docs/modules/: 01_data_collection.md  01_data_collection.mdx  02_preprocessing.md  02_preprocessing.mdx  03_opportunity_ranking.mdx
docs/schemas/: unified-schema.mdx  unified_schema.md
src/portals_client/: __init__.py  config.py
src/portals_client/agent/: decision_engine.py  execution_agent.py  market_analyzer.py
src/portals_client/core/: __init__.py  api_client.py  exceptions.py  models.py
src/portals_client/strategy/: rebalancing.py  risk_management.py  yield_optimization.py
src/portals_client/utils/: __init__.py  token_mappings.py
